[gd_scene load_steps=12 format=3 uid="uid://dxb17qgwkfuqi"]

[ext_resource type="Script" uid="uid://bbcsggrjlncfa" path="res://scenes/enemies/common/enemy_character.gd" id="1_n42a1"]
[ext_resource type="Texture2D" uid="uid://8odcr6rr6cga" path="res://scenes/enemies/brawler/skeleton.png" id="1_q0wsr"]
[ext_resource type="PackedScene" uid="uid://b14khyssldpgk" path="res://scenes/health_bar.tscn" id="2_3j7o2"]
[ext_resource type="PackedScene" uid="uid://bpiqdllq5i4td" path="res://scenes/spells/melee_spell.tscn" id="2_215y0"]
[ext_resource type="PackedScene" uid="uid://c5xeltgbeoosb" path="res://shaders/sprite_flasher.tscn" id="3_xie8d"]
[ext_resource type="PackedScene" uid="uid://5m5dv8wp21pn" path="res://scenes/enemies/common/enemy_stats/enemy_stats.tscn" id="5_n42a1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n60ya"]
radius = 7.0

[sub_resource type="Animation" id="Animation_5uy6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_c4w8v"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 2.21914, 0.466517),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"instantiate_attack"
}]
}

[sub_resource type="Animation" id="Animation_4ra3w"]
resource_name = "enemy_move_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4w8v"]
_data = {
&"RESET": SubResource("Animation_5uy6h"),
&"attack": SubResource("Animation_c4w8v"),
&"enemy_move_animation": SubResource("Animation_4ra3w")
}

[node name="EnemyBrawler" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_n42a1")
spell = ExtResource("2_215y0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_q0wsr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_n60ya")

[node name="HealthBar" parent="." instance=ExtResource("2_3j7o2")]
offset_left = -9.1
offset_top = -23.94
offset_right = -9.1
offset_bottom = -23.94
scale = Vector2(0.18, 0.18)

[node name="SpriteFlasher" parent="." instance=ExtResource("3_xie8d")]

[node name="AttackTimer" type="Timer" parent="."]

[node name="EnemyStats" parent="." instance=ExtResource("5_n42a1")]
attack_range = 40
health_points = 10.0
speed_multiplier = 6000

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4w8v")
}
